Add description field to AggregateServiceRecord, AggregateServiceCommandType, AggregateServiceDomainEventType, and propagate from *Info annotations
- Add nullable description field to AggregateServiceRecord (from @AggregateInfo/@AgenticAggregateInfo)
- Add nullable description field to AggregateServiceCommandType (from @CommandInfo)
- Add nullable description field to AggregateServiceDomainEventType (from @DomainEventInfo)
- Add getDescription() to AggregateRuntime interface
- Implement getDescription() in KafkaAggregateRuntime
- Add normalizeDescription() utility (blank -> null)
- Delegate getDescription() in KafkaAgenticAggregateRuntime
- Populate descriptions in AkcesAggregateController.publishControlRecord()
- Populate descriptions in AkcesAgenticAggregateController.publishControlRecord()
- Update test constructors in AkcesAggregateControllerTests, RuntimeTests, AkcesClientTests

Agent-Logs-Url: https://github.com/elasticsoftwarefoundation/akces-framework/sessions/155e062c-8ac3-4b61-a3dd-f44e26b2bf04

Co-authored-by: jwijgerd <914840+jwijgerd@users.noreply.github.com>